[package]
name = "teilen"
version = "0.0.1"
authors = ["loom4k <contact@loom4k.me>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
log = "0.4.8"
env_logger = "0.7.1"
chrono = { version = "0.4.11", features = ["serde"] }
regex = "1.3.7"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
warp = "0.2.3"
